asset/sass/_screen.scss
/* ... */
.template-3-grid.assets .asset img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    max-width: none;
}

.media-card.media-embed {
    --grid-column-count: 2 !important;
    --grid-item--min-width: 150px;
    --grid-layout-gap: 24px;
    --gap-count: calc(var(--grid-column-count) - 1);
    --total-gap-width: calc(var(--gap-count) * var(--grid-layout-gap));
    --grid-item--max-width: calc((100% - var(--total-gap-width)) / var(--grid-column-count));
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(max(var(--grid-item--min-width), var(--grid-item--max-width)), 1fr));
    grid-gap: var(--grid-layout-gap);
    width: 100vw;
    max-width: 100%;
    align-items: stretch;
    margin: $spacing-l 0;

    .resource {
        display: flex;
        background-color: #fff;
        padding: $spacing-l;
        align-items: center;
        border: 1px solid $light;
        height: 100%;
    }

    .resource-meta {
        width: 50%;
        padding-left: $spacing-l;
    }

    .media-render {
        max-width: 50%;
    }
}

@media screen and (max-width:799px) {
    .media-card.media-embed {
        --grid-column-count: 1 !important;
    }
}


/* @end */

/* @group ----- Resource List ----- */

ul.resource-list {
    list-style-type: none;
    padding-left: 0;
}

ul.resource-list .resource {
    border-bottom: 1px solid $light;
    padding-bottom: ($spacing-l - 1px);
    margin: $spacing-l 0;
    overflow: hidden;
    position: relative;

    & > *:last-child {
        margin-bottom: 0;
    }

    &:first-child {
        border-top: 1px solid $light;
        padding-top: ($spacing-l - 1px);
    }
}

ul.resource-list .resource img {
    height: auto;
    width: 2 * $spacing-l;
    float: right;
    margin-left: $spacing-m;
}

ul.resource-list .resource h4 {
    margin-top: 0;
}

.body-truncate-fade ul.resource-list .resource .description {
    overflow: hidden;
    max-height: 4 * $spacing-l;
    position: relative;
}

.body-truncate-fade ul.resource-list .resource .description:after {
    content: "";
    position: absolute;
    top: 2.75 * $spacing-l;
    left: 0;
    right: 0;
    height: 1.25 * $spacing-l;
    background: linear-gradient(to top, rgba(248,248,248,1), rgba(248,248,248,0));
}

.body-truncate-ellipsis ul.resource-list .resource .description {
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;     
}

ul.resource-list .resource img ~ * {
    width: calc(100% - #{2.5 * $spacing-l});
}

/* @end */

/* @group ----- Browse ---- */

.search-filters {
    margin-bottom: $spacing-l;
}

.filter-label,
.filter-value {
    display: inline-block;
    border: 1px solid $light;
    padding: ($spacing-s - 1px);
}

.filter-label {
    background-color: $light;
}

.filter-value {
    margin-left: -5px;
}

.browse-controls {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.advanced-search {
    line-height: 1.5 * $base-line-height;
}

/* @end */

/* @group ----- Show ----- */

.expand:after,
.collapse:after {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
}

.expand:after {
    content: "\f0da";
}

.collapse:after {
    content: "\f0d7"
}

.collapsible {
    display: none;
}

.collapse + .collapsible {
    display: block;
    border-left: 3px solid $gray;
    padding: $spacing-s $spacing-l;
    margin: $spacing-m 0;
    width: 100%;
}

body.resource #content > h2:first-of-type + h3 {
    font-size: .75 * $base-font-size;
    text-transform: uppercase;
    margin: -$spacing-l 0 $spacing-l;
}

.property {
    margin-bottom: $spacing-l;

    &:last-child {
        margin-bottom: 0;
    }
}

.property dt {
    margin-bottom: 0;
    font-size: .75 * $base-font-size;
    font-weight: bold;

    &:first-child {
        margin-top: 0;
    }
}

.value {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin-left: 0;

    &:not(:last-child) {
        margin-bottom: $spacing-m;
    }
}

.value-content:not(:only-child) {
    margin-right: $spacing-s;
}

.resource-link img {
    width: auto;
    height: 1.5 * $spacing-l;
    display: inline-block;
    vertical-align: middle;
    margin-right: $spacing-s;
}

.property .value a {
    display: inline-block;
    vertical-align: bottom;
}

.property .value:not(:last-child) img {
    margin-bottom: $spacing-s;
}

.property .value:not(:last-child) img + a {
    margin-bottom: $spacing-s;
}

.property .value .language {
    background-color: lighten($gray, 15%);
    padding: 0 $spacing-s;
    font-size: .75 * $base-font-size;
    margin-right: $spacing-s;
}

.property .private:after {
    content: "\f070";
    font-family: "Font Awesome 5 Free";
    font-size: .75 * $base-font-size;
    font-weight: 900;
}

.media-list .resource-link {
    width: 100%;
    display: block;

    &:not(:last-child) {
        margin-bottom: $spacing-m;
    }
}

#content .media.resource {
    display: inline-block;
    text-align: center;
    vertical-align: bottom;
    margin-right: $spacing-s;

    &:hover {
        border-bottom: 0;
    }
}

#content .media.resource img {
    vertical-align: top;
    margin-bottom: $spacing-m;
}

.media-render > * {
    max-width: 100%;
}

#linked-resources caption {
    text-align: left;
    font-weight: bold;
    border-bottom: 3px solid $gray;
    padding: $spacing-s $spacing-m ($spacing-s - 3px);
}

#linked-filter h4 {
    margin-bottom: $spacing-m;
}

#linked-resources .resource-link {
    margin-bottom: 0;
    display: flex;
    align-items: center;
}

/* @end */

/* @group ----- Advanced Search ----- */

#advanced-search .value:not(:last-child) {
    margin-bottom: $spacing-m;
}

.remove-value {
    position: relative;
    width: 1.5 * $spacing-l;
    margin-left: $spacing-s;
}

/* @end */

/* @group ----- Search ----- */

.results {
  margin-bottom: 2 * $spacing-l;
  clear: both;
}

.results ul {
  list-style: none;
  padding-left: 0;  
}

.results .result-title {
  font-weight: bold;
}
/* ... */

